style(FloatingPanel): fix the background color in dark mode

--- a/src/components/floating-panel/floating-panel.less
+++ b/src/components/floating-panel/floating-panel.less
@@ -27,7 +27,7 @@
     bottom: -100vh;
     height: 100vh;
     width: 100vw;
-    background: var(--adm-color-white);
+    background: var(--adm-color-background);
   }
   .adm-floating-panel-header {
     flex: none;
@@ -51,6 +51,6 @@
   .adm-floating-panel-content {
     flex: 1;
     overflow-y: scroll;
-    background: var(--adm-color-white);
+    background: var(--adm-color-background);
   }
 }
